--- a/RickAndMortyFlexx/Screens/Main/Base.lproj/Main.storyboard
+++ b/RickAndMortyFlexx/Screens/Main/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1ol-JH-dAc">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -28,7 +28,6 @@
         <!--Item-->
         <scene sceneID="GgB-ak-XL8">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Lky-jI-n6I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController id="0re-sS-Hl8" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="jVm-sy-e00"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2Sv-mn-fGt">
@@ -36,6 +35,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lky-jI-n6I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2368" y="575"/>
         </scene>
