--- a/RickAndMortyFlexx/Screens/Main/LocationFlow/LocationFeedViewController/Cells/LocationCell/LocationCell.xib
+++ b/RickAndMortyFlexx/Screens/Main/LocationFlow/LocationFeedViewController/Cells/LocationCell/LocationCell.xib
@@ -17,17 +17,17 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME OF THE PLANET BUT REALLY LONG" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WiI-gY-8Nk">
-                        <rect key="frame" x="0.0" y="8" width="328" height="41"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="8" y="8" width="312" height="41"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hee-YO-WHG">
-                        <rect key="frame" x="16" y="57" width="131" height="51"/>
+                        <rect key="frame" x="16" y="57" width="229.5" height="51"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Space Station" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NHx-FF-lEm">
-                                <rect key="frame" x="0.0" y="0.0" width="131" height="51"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Space Station" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NHx-FF-lEm">
+                                <rect key="frame" x="0.0" y="0.0" width="229.5" height="51"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -41,11 +41,11 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N7N-W5-QW1">
-                        <rect key="frame" x="181" y="116" width="131" height="51"/>
+                        <rect key="frame" x="82.5" y="116" width="229.5" height="51"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqb-MV-qv8">
-                                <rect key="frame" x="0.0" y="0.0" width="131" height="51"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dimension c-137" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqb-MV-qv8">
+                                <rect key="frame" x="0.0" y="0.0" width="229.5" height="51"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -62,18 +62,25 @@
             </view>
             <constraints>
                 <constraint firstItem="N7N-W5-QW1" firstAttribute="height" secondItem="hee-YO-WHG" secondAttribute="height" id="5CV-wz-YBn"/>
-                <constraint firstItem="WiI-gY-8Nk" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" id="6cL-ab-git"/>
+                <constraint firstItem="WiI-gY-8Nk" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.95" id="6cL-ab-git"/>
                 <constraint firstItem="WiI-gY-8Nk" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Iip-gb-LiI"/>
                 <constraint firstAttribute="trailing" secondItem="N7N-W5-QW1" secondAttribute="trailing" constant="16" id="YIL-hY-htp"/>
                 <constraint firstAttribute="bottom" secondItem="N7N-W5-QW1" secondAttribute="bottom" constant="12" id="Zmw-K7-ICv"/>
                 <constraint firstItem="N7N-W5-QW1" firstAttribute="top" secondItem="hee-YO-WHG" secondAttribute="bottom" constant="8" id="aNL-1U-qcq"/>
                 <constraint firstItem="hee-YO-WHG" firstAttribute="top" secondItem="WiI-gY-8Nk" secondAttribute="bottom" constant="8" id="cXe-fD-ktP"/>
-                <constraint firstItem="N7N-W5-QW1" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.4" id="g6t-QX-hUC"/>
-                <constraint firstItem="hee-YO-WHG" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.4" id="p6d-qF-2vY"/>
+                <constraint firstItem="N7N-W5-QW1" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.7" id="g6t-QX-hUC"/>
+                <constraint firstItem="hee-YO-WHG" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.7" id="p6d-qF-2vY"/>
                 <constraint firstItem="hee-YO-WHG" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="rur-0I-WIe"/>
                 <constraint firstItem="WiI-gY-8Nk" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="xFf-Pe-TGn"/>
             </constraints>
             <size key="customSize" width="328" height="179"/>
+            <connections>
+                <outlet property="dimensionLabel" destination="cqb-MV-qv8" id="5q5-ow-mZg"/>
+                <outlet property="dimensionOpacityView" destination="N7N-W5-QW1" id="yr8-l4-MdF"/>
+                <outlet property="nameLabel" destination="WiI-gY-8Nk" id="57q-0g-p3Z"/>
+                <outlet property="typeLabel" destination="NHx-FF-lEm" id="RDw-kW-lnR"/>
+                <outlet property="typeOpacityView" destination="hee-YO-WHG" id="WlW-Zj-aFC"/>
+            </connections>
             <point key="canvasLocation" x="255.07246376811597" y="127.56696428571428"/>
         </collectionViewCell>
     </objects>
